tests/baselines/reference/asyncSetter_es5.errors.txt
tests/cases/conformance/async/es5/asyncSetter_es5.ts(2,3): error TS1042: 'async' modifier cannot be used here.


==== tests/cases/conformance/async/es5/asyncSetter_es5.ts (1 errors) ====
    class C {
      async set foo(value) {
      ~~~~~
!!! error TS1042: 'async' modifier cannot be used here.
      }
    }